[package]
name = "coreutils_jwt"
license = "MIT"
version = "0.1.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "Json Web Token service."

[dependencies]
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
jsonwebtoken = "4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"