[package]
name = "coreutils_jwt"
license = "MIT"
version = "0.4.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "Json Web Token service."
edition = "2018"

[dependencies]
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
jsonwebtoken = "5"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
