[package]
name = "coreutils_jpo_postgres"
license = "MIT"
version = "0.4.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = ""
edition = "2018"

[dependencies]
log = "0.4"
jpo = { package = "coreutils_jpo", path = "../jpo", version = "0.4.0" }
postgres = { version = "0.15", features = ["with-serde_json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
testcontainers = "0.4"